Cambios sin SessionManager y Message sin getter ni setter de timestamp